--- a/Homepage/Games/notecard-inc/Index.html
+++ b/Homepage/Games/notecard-inc/Index.html
@@ -9,6 +9,10 @@
 </head>
 <body>
 
+    <div id="overlay"></div>
+    <button onclick="on()">on</button>
+
+
     <h1 id="number">Start or Load save</h1>
     <button onclick="createnote()">Manufacture Notecard</button>
 
@@ -29,7 +33,7 @@
     <br />
     <br />
     <br />
-    <t id="automachinestitle"><b>Auto Machines: 800 (0)</b></t>
+    <t id="automachinestitle"><b>Auto Machines: $30 (0)</b></t>
     <br />
     <br />
     <button onclick="addautomachine()" id="automachine">Upgrade Auto Machine</button>
