--- a/Homepage/games.html
+++ b/Homepage/games.html
@@ -5,7 +5,7 @@
 <link rel="icon" type="image/x-icon" href="Images/Favcon.ico">
 <div id="nav">
 	<button onclick="window.location.href='index.html'" class="navbutton"><b>Home</b></button>
-	<button class="navbutton"><b>Proxy (Coming Soon)</b></button>
+	<button class="navbutton"><b>Pr0xy (Coming Soon)</b></button>
 	<button onclick="window.location.href='games.html'" class="navbutton"><b>Games</b></button>
 	<button onclick="window.open('https://discord.gg/pnCcstvjpd','popup','width=600,height=600')" class="navbutton"><b>Discord</b></button>
 </div>
