--- a/Homepage/Games/notecard-inc/Index.html
+++ b/Homepage/Games/notecard-inc/Index.html
@@ -29,7 +29,7 @@
     <br />
     <br />
     <br />
-    <t id="automachinestitle"><b>Auto Machines: 800 (0)</b></t>
+    <t id="automachinestitle"><b>Auto Machines: $30 (0)</b></t>
     <br />
     <br />
     <button onclick="addautomachine()" id="automachine">Upgrade Auto Machine</button>
