--- a/Homepage/Games/notecard-inc/Index.html
+++ b/Homepage/Games/notecard-inc/Index.html
@@ -8,6 +8,19 @@
     <title>Notecard Inc</title>
 </head>
 <body>
+    <div id="div">
+<h2><b>Audit Log:</b></h2>
+<p id="fire">Fires:</p>
+<p id="sue">Sues:</p>
+<p id="lorax">Loraxes Assasinated:</p>
+<br><br>
+<br><br>
+<br><br>
+<br><br>
+<br><br>
+<br><br>
+<br><br>
+    </div>
 
     <h1 id="number">Start or Load save</h1>
     <button onclick="createnote()">Manufacture Notecard</button>
