--- a/Homepage/Games/notecard-inc/Index.html
+++ b/Homepage/Games/notecard-inc/Index.html
@@ -30,7 +30,7 @@
     </div>
 
     <h1 id="number">Start or Load save</h1>
-    <button onclick="createnote()">Manufacture Notecard</button>
+    <button id="notecardclicker" onclick="createnote()">Manufacture Notecard</button>
 
     <h2 id="moneytitle">Money: 0</h2>
     <h5 id="amount">Pack: 52 cards (+$4)</h5>
@@ -69,7 +69,7 @@
         <t id="firesafety"><b>Fire alarm (0)</b></t>
         <br />
         <br />
-        <button onclick="buyfirealarm()" id="firealarm" disabled>Buy Fire Alarm</button>
+        <button onclick="buyfirealarm()" id="firealarm">Buy Fire Alarm</button>
 
 
     </div>
