--- a/Homepage/Games/notecard-inc/Index.html
+++ b/Homepage/Games/notecard-inc/Index.html
@@ -66,7 +66,7 @@
     <br />
     <br />
     <div id="firediv" style="display: none;">
-        <t id="firesafety"><b>Fire alarm (0)</b></t>
+        <t id="firesafety"><b>Fire alarm $100 (0)</b></t>
         <br />
         <br />
         <button onclick="buyfirealarm()" id="firealarm">Buy Fire Alarm</button>
