--- a/Homepage/Homepage/courses.html
+++ b/Homepage/Homepage/courses.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="style.css">
 <script src="soundeffects.js"></script>
 <script src="generategames.js"></script>
-<title>EOC Study</title>
+<title>Greater Grades</title>
 <link rel="icon" type="image/x-icon" href="Images/Favcon.ico">
 <div id="nav">
 	<button onclick="window.location.href='index.html'" class="navbutton"><b>Home</b></button>
