--- a/Homepage/Homepage/feedback.html
+++ b/Homepage/Homepage/feedback.html
@@ -4,7 +4,7 @@
 <script src="soundeffects.js"></script>
 <link rel="icon" type="image/x-icon" href="Images/Favcon.ico">
 <!--Homepage-->
-<title>EOC Study</title>
+<title>Greater Grades</title>
 <div id="nav">
 	<button onclick="window.location.href='index.html'" class="navbutton"><b>Home</b></button>
 	<button class="navbutton"><b>Proxy (Coming Soon)</b></button>
