--- a/Homepage/Homepage/index.html
+++ b/Homepage/Homepage/index.html
@@ -3,7 +3,7 @@
 <script src="soundeffects.js"></script>
 <link rel="icon" type="image/x-icon" href="Images/Favcon.ico">
 <!--Homepage-->
-<title>EOC Study</title>
+<title>Greater Grades</title>
 <div id="nav">
 	<button onclick="window.location.href='index.html'" class="navbutton"><b>Home</b></button>
 	<button onclick="window.location.href='pricing.html'" class="navbutton"><b>Pricing</b></button>
