--- a/Homepage/Homepage/pricing.html
+++ b/Homepage/Homepage/pricing.html
@@ -2,7 +2,7 @@
     <link rel="stylesheet" href="style2.css">
     <script src="soundeffects.js"></script>
     <link rel="icon" type="image/x-icon" href="Images/Favcon.ico">
-    <title>EOC Study</title>
+    <title>Greater Grades</title>
     
     <body>
         <div id="nav">
