--- a/Homepage/Homepage/Games/notecard-inc/gamespage.html
+++ b/Homepage/Homepage/Games/notecard-inc/gamespage.html
@@ -1,6 +1,6 @@
 <script src="openthegame.js"></script>
 <script type="text/javascript" src="../gamenames.json"></script>
-<title>Portide</title>
+<title>Greater Grades</title>
 <style>
     body{
         background: linear-gradient(to right, #f50057, #00a6ff);
