--- a/Homepage/Homepage/pricing.html
+++ b/Homepage/Homepage/pricing.html
@@ -9,7 +9,7 @@
             <button onclick="window.location.href='index.html'" class="navbutton"><b>Home</b></button>
             <button class="navbutton"><b>Pricing</b></button>
             <button onclick="window.location.href='courses.html'" class="navbutton"><b>Courses</b></button>
-            <button onclick="Error()" class="navbutton"><b>Login</b></button>
+            <button onclick="window.location.href='login.html'" class="navbutton"><b>Login</b></button>
         </div>
         <div class="columns">
             <ul class="price">
@@ -72,7 +72,7 @@
 
 /* Add shadows on hover */
 .price:hover {
-  box-shadow: 0 8px 12px 0 rgba(0,0,0,0.2)
+  box-shadow: 0 8px 12px 0 rgba(255, 255, 255, 0.2)
 }
 
 /* Pricing header */
