--- a/Homepage/Homepage/courses.html
+++ b/Homepage/Homepage/courses.html
@@ -1,13 +1,14 @@
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="style2.css">
 <script src="soundeffects.js"></script>
 <script src="generategames.js"></script>
 <title>Greater Grades</title>
 <link rel="icon" type="image/x-icon" href="Images/Favcon.ico">
+<style>body{background-image: none; background-color: rgb(38, 38, 38)}</style>
 <div id="nav">
 	<button onclick="window.location.href='index.html'" class="navbutton"><b>Home</b></button>
-    <button class="navbutton"><b>Pricing</b></button>
+    <button onclick="window.location.href='pricing.html'" class="navbutton"><b>Pricing</b></button>
     <button onclick="window.location.href='courses.html'" class="navbutton"><b>Courses</b></button>
-    <button onclick="Error()" class="navbutton"><b>Login</b></button>
+    <button onclick="window.location.href='login.html'" class="navbutton"><b>Login</b></button>
 </div>
 <br>
 <br>
