--- a/Homepage/Homepage/courses.html
+++ b/Homepage/Homepage/courses.html
@@ -26,6 +26,7 @@
 	Generate("course-2")
 	Generate("course-3")
 	Generate("course-4")
+	Generate("aiquiz")
 	Generate("course-5")
 	Generate("course-5")
 	Generate("course-5")
