--- a/Homepage/Games/notecard-inc/Index.html
+++ b/Homepage/Games/notecard-inc/Index.html
@@ -10,8 +10,11 @@
 
 <body>
     <div id="div">
-<h2><b>Notecard Inc</b></h2>
+<h2 id="nps"><b>Notecard Inc</b></h2>
+<t id="subtext"><b>(Notecards Per Second)</b></t>
 <p id="fire">Fires: 0</p>
+<p id="capacity">Capacity: 64 NPS</p>
+<div id="firemeter"></div>
 <p id="sue" style="display: none;">Sues: 0</p>
 <p id="lorax" style="display: none;">Loraxes Assasinated: 0</p>
 <br><br>
@@ -70,8 +73,6 @@
         <br />
         <br />
         <button onclick="buyfirealarm()" id="firealarm">Buy Fire Alarm</button>
-
-
     </div>
     <h2 id="papertitle">Paper: 100 sheets</h2>
     <h5 id="paper">1 Sheet of paper: ($0.8)</h5>
