--- a/Homepage/Homepage/Games/notecard-inc/Index.html
+++ b/Homepage/Homepage/Games/notecard-inc/Index.html
@@ -17,6 +17,7 @@
 <div id="firemeter"></div>
 <p id="sue" style="display: none;">Sues: 0</p>
 <p id="lorax" style="display: none;">Loraxes Assasinated: 0</p>
+    <div class="piechart"></div> 
 <br><br>
 <br><br>
 <br><br>
